--- a/style.css
+++ b/style.css
@@ -3,3 +3,37 @@ body {
   height: 100%;
   margin: 0;
 }
+h1 { 
+  color:red;
+  text-align: center
+}
+ img { 
+  display: block;
+  margin-left: auto;  
+  margin-right: auto; 
+}
+figcaption {
+  text-align: center;
+  font-size: smaller;
+}
+a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: yellow;
+}
+/* #featured-property */
+p {
+  width: 800px;
+  text-align: center;
+  margin: auto;
+}
+/* #details */
+div {
+  float: left;
+}
+
+
+
+
+
+
